created: Routes to Clients and created ClientController and created Validation and documentation swagger
