# routes/api.php
@@ -1,9 +1,18 @@
 <?php
 
+use App\Http\Controllers\Api\ClientController;
 use App\Http\Controllers\Api\ProjectController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
+//Client
+Route::get('/client', [ClientController::class, 'index']);
+Route::post('/client', [ClientController::class, 'store']);
+Route::get('/client/{id}', [ClientController::class, 'show']);
+Route::put('/client/{id}', [ClientController::class, 'update']);
+Route::delete('/client/{id}', [ClientController::class, 'destroy']);
+
+//Project
 Route::get('/projects', [ProjectController::class, 'index']);
 Route::post('/projects', [ProjectController::class, 'store']);
 Route::get('/projects/{id}', [ProjectController::class, 'show']);
